--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -1,9 +1,9 @@
-.formWrapper {
+/* .formWrapper {
   width: 900px;
-}
+} */
 
 .container {
-  max-width: 400px;
+  /* max-width: 1920px; */
   margin-right: auto;
   margin-left: auto;
   padding: 20px;
