--- a/src/components/page/Register.module.css
+++ b/src/components/page/Register.module.css
@@ -1,7 +1,7 @@
 .register {
   position: relative;
   max-width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   background-image: url("https://cdn.pixabay.com/photo/2022/02/13/13/10/mountain-7011121_1280.png");
   background-repeat: no-repeat;
   background-position: center;
