--- a/src/components/pages/RegisterPage/RegisterPage.module.css
+++ b/src/components/pages/RegisterPage/RegisterPage.module.css
@@ -1,4 +1,4 @@
-.register {
+/* .register {
   position: relative;
   max-width: 100%;
   min-height: 100vh;
@@ -6,4 +6,4 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-}
+} */
