--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -7,11 +7,10 @@
 }
 
 .wrapper {
-  /* position: relative; */
-  /* max-width: 100%;
-  min-height: 100vh;*/
   background-image: url("https://cdn.pixabay.com/photo/2022/02/13/13/10/mountain-7011121_1280.png");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  width: 100%;
+  height: 100vh;
 }
