--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -1,4 +1,13 @@
 .searchWrapper {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 50px;
+  border-radius: 10px;
+  padding: 32px;
+  box-shadow: 0 4px 16 #ccc;
+  width: 300px;
+  font-family: sans-serif;
+  letter-spacing: 1px;
   position: relative;
   margin-bottom: 32px;
 }
